refactor: 收口报价核算链路并清理旧实现